Add dotenv-java dependency and update .gitignore
Included the dotenv-java library to manage environment variables within the project. Updated .gitignore to exclude .env files for better security and version control practices.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,4 @@ spring.application.name=AICookBook-APIClient
 # Server port
 server.port=8081
 
-# OpenAI API Key
-openai.api.key=${OPENAI_APIKEY}
+openai.api.key=${openai.api.key}
