--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>4.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
     </dependencies>
 
