--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
             <artifactId>dotenv-java</artifactId>
             <version>2.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+        </dependency>
 
 
         <dependency>
